
Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache
CAY-1544 Remove jdk1.6 module from Cayenne sources
CAY-1545 cayenne-lifecycle Referenceable handler refactoring
CAY-1547 cayenne-lifecycle: support for setting UuidRelationships
CAY-1549 Migrate BatchQueryBuilderFactory to DI
CAY-1553 cayenne-lifecycle: @SortWeight annotation 
CAY-1573 QueryLogger to DI JdbcEventLogger migration
CAY-1584 Improve Cayenne modeler re-ordering named query in the cayenne map xml
CAY-1586 New extension point: a strategy for retaining objects in the ObjectStore
CAY-1590 DDL generation without a live datasource
CAY-1594 DI extension point: turning on/off cross-ObjectContext synchronization
CAY-1595 EHCache implementation of Provider<QueryCache>
CAY-1598 Per DataMap listeners are called for all entities in DataDomain
CAY-1599 Annotation-based global listeners registration
CAY-1605 Switch Cayenne to use unified Maven repository
CAY-1606 Change CayenneModeler new object naming strategy
CAY-1610 ObjectContext API to use varargs
CAY-1611 ObjectContext API improvement - better 'localObect' method

Bug Fixes Since 3.1M2:
